--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Home</h1>
+			<h1>&nbsp;</h1>
 			<h1><div id="liveClock"/></h1>
 		</header>
 		<div id="content"></div>
