--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			<h1><div id="liveClock"/></h1>
 		</header>
 		<div id="content"></div>
-		<div id="background"></div>
+		<div id="background" class="overlay"></div>
+		<div id="dark" class="overlay"></div>
 	</body>
 	<script type="text/javascript" src="populate.js"></script>
 	<script type="text/javascript" src="clock.js"></script>
