--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 	</head>
 	<body>
 		<header>
-			<h1>&nbsp;</h1>
 			<h1><div id="liveClock"/></h1>
 		</header>
 		<div id="content"></div>
+		<footer>
+		</footer>
 		<div id="background" class="overlay"></div>
 		<div id="dark" class="overlay"></div>
 	</body>
