Add search bar to bottom of page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		</header>
 		<div id="content"></div>
 		<footer>
+				<form action="https://duckduckgo.com/" method="get">
+					<input type="text" name="q" placeholder="[Search DuckDuckGo]" id="search" autocomplete="off">
+				</form>
 		</footer>
 		<div id="background" class="overlay"></div>
 		<div id="dark" class="overlay"></div>
